[package]
name = "datetime"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitwrap = "0.4.1"           # pack/unpack data into byte array
bitwrap_derive = "0.4.1"    # derive for bitwrap
